<resources>
    <string name="app_name">Identity Verification Sample</string>

    <string name="button_start_verification">Verify Identity</string>
    <string name="identity_verification_allowed_types">Available document types</string>
    <string name="identity_verification_options">Identity Verification Options</string>
    <string name="identity_verification_require_selfie">Use document and selfie</string>
    <string name="identity_verification_allow_uploads">Allow Uploads</string>
    <string name="identity_verification_allowed_type_driver_license">Driver License</string>
    <string name="identity_verification_allowed_type_passport">Passport</string>
    <string name="identity_verification_allowed_type_identity_card">Identity Card</string>
    <string name="identity_verification_option">Use Native SDK</string>
    <string name="identity_verification_option_id_number">Verify ID number.</string>
    <string name="identity_verification_option_tax_pin">Verify Tax PIN</string>
</resources>